# grezi-next

./: .gitignore  Cargo.toml  PKGBUILD  README.md  grezi.puml  grezi.thumbnailer  grz.xml  proposal.ms  proposal_uses
.helix/: config.toml
GreziRemote/: AndroidManifestBackup.xml  Cargo.toml  settings.gradle.kts
GreziRemote/app/: build.gradle.kts
GreziRemote/app/release/: output-metadata.json
GreziRemote/app/release/baselineProfiles/0/: app-release.dm
GreziRemote/app/release/baselineProfiles/1/: app-release.dm
GreziRemote/app/src/androidTest/java/com/grezi/remote/: ExampleInstrumentedTest.kt
GreziRemote/app/src/main/: AndroidManifest.xml
GreziRemote/app/src/main/java/com/grezi/remote/: MainActivity.kt
GreziRemote/app/src/main/java/com/grezi/remote/ui/theme/: Color.kt  Theme.kt  Type.kt
GreziRemote/app/src/main/res/values/: strings.xml  themes.xml
GreziRemote/app/src/main/rust/src/: app.rs  lib.rs
GreziRemote/app/src/test/java/com/grezi/remote/: ExampleUnitTest.kt
GreziRemote/gradle/: libs.versions.toml
GreziRemote/gradle/wrapper/: gradle-wrapper.properties
egui-anim/: Cargo.toml
egui-anim/src/: lib.rs
egui_rasterizer/: Cargo.toml
egui_rasterizer/src/: lib.rs
grezi/: .gitignore  Cargo.toml  PKGBUILD  build.rs  index.html  opt.sh
grezi-vscode/: grezi.tmLanguage.json  language-configuration.json  package-lock.json  package.json
grezi-vscode/client/src/: extension.ts
grezi/.cargo/: config.toml
grezi/assets/: manifest.json  sw.js
grezi/src/: args.rs  cairo.rs  frame_history.rs  impress_server.rs  label.rs  layout.rs  lib.rs  main.rs  server.rs
grezi/src/lsp/: completion.rs  execute_command.rs  folding_range.rs  formatter.rs  hello_world.grz  inlay_hints.rs  mod.rs  rename.rs  semantic_tokens.rs  semantic_tokens.scm  symbols.rs  you_can.rs
grezi/src/lsp/queries/: folding_range.scm  inlay_edge.scm  obj_in_slide.scm  object_name.scm  semantic_tokens.scm  slide_complete.scm  slide_index.scm  strings.scm  top_level_search.scm  vb_in_slide.scm  viewbox_name.scm
grezi/src/parser/: actions.rs  citations.rs  color.rs  highlighting.rs  mod.rs  objects.rs  slides.rs  viewboxes.rs
grezi/src/parser/objects/: cosmic_jotdown.rs  mod.rs  serde_suck.rs
grezi/src/resolver/: layout.rs  mod.rs
grezi_egui/: Cargo.toml
grezi_egui/src/: lib.rs  object.rs  text.rs
grezi_export/: Cargo.toml
grezi_export/src/: lib.rs
grezi_file_owner/: Cargo.toml
grezi_file_owner/src/: lib.rs
grezi_font_serde/: Cargo.toml
grezi_font_serde/src/: lib.rs
grezi_layout/: Cargo.toml
grezi_layout/src/: constraint.rs  flex.rs  layout.rs  lib.rs  rect.rs
grezi_lsp/: Cargo.toml
grezi_lsp/src/: folding_range.rs  lib.rs  rename.rs  semantic_tokens.rs  symbols.rs
grezi_lsp/src/formatter/: actions.rs  mod.rs  object.rs  registers.rs  slide.rs  viewbox.rs
grezi_lsp/src/queries/: rename.scm  semantic_tokens.scm
grezi_mathml/: Cargo.toml
grezi_mathml/src/: lib.rs
grezi_native/: Cargo.toml  all_paper_sizes.json  build.rs  maps.slideshow
grezi_native/src/: app.rs  args.rs  main.rs  remote.rs
grezi_parser/: Cargo.toml
grezi_parser/examples/: parse.rs
grezi_parser/src/: actions.rs  lib.rs  object.rs  slide.rs  text.rs
grezi_parser/src/parse/: cursor.rs  mod.rs
grezi_parser/src/parse/error/: base16_terminal_theme.rs  highlight.rs  mod.rs
grezi_parser/src/parse/helix_loader/: grammar.rs  mod.rs  path.rs
grezi_parser/src/parse/slideshow/: actions.rs  mod.rs  object.rs  registers.rs  slide.rs  viewbox.rs
grezi_parser/src/parse/slideshow/text/: dark_plus_theme.rs  format_djot.rs  mod.rs  syntax_highlighting.rs
grezi_web/: Cargo.toml  opt.sh
grezi_web/.cargo/: config.toml
grezi_web/src/: app.rs  main.rs
lsp/: Cargo.toml
lsp/src/: main.rs
tree-sitter-grz/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  build.zig  build.zig.zon  example.grz  go.mod  grammar.js  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-grz/bindings/c/: tree-sitter-grz.pc.in
tree-sitter-grz/bindings/go/: binding.go  binding_test.go  go.mod
tree-sitter-grz/bindings/node/: binding.cc  index.js
tree-sitter-grz/bindings/python/tests/: test_binding.py
tree-sitter-grz/bindings/python/tree_sitter_grz/: __init__.py  binding.c
tree-sitter-grz/bindings/rust/: build.rs  lib.rs
tree-sitter-grz/bindings/swift/TreeSitterGrz/: grz.h
tree-sitter-grz/bindings/swift/TreeSitterGrzTests/: TreeSitterGrzTests.swift
tree-sitter-grz/bindings/zig/: root.zig
tree-sitter-grz/queries/: highlights.scm  highlights_zed.scm  indents.scm  injections.scm
tree-sitter-grz/src/: grammar.json  node-types.json  parser.c  scanner.c
tree-sitter-ntbib/: Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
tree-sitter-ntbib/bindings/c/: tree-sitter-ntbib.h  tree-sitter-ntbib.pc.in
tree-sitter-ntbib/bindings/go/: binding.go  binding_test.go  go.mod
tree-sitter-ntbib/bindings/node/: binding.cc  index.js
tree-sitter-ntbib/bindings/python/tests/: test_binding.py
tree-sitter-ntbib/bindings/python/tree_sitter_ntbib/: __init__.py  binding.c
tree-sitter-ntbib/bindings/rust/: build.rs  lib.rs
tree-sitter-ntbib/bindings/swift/TreeSitterNtbibTests/: TreeSitterNtbibTests.swift
tree-sitter-ntbib/src/: grammar.json  node-types.json  parser.c
