[workspace]
members = ["grezi_egui", "grezi_font_serde", "grezi_layout", "grezi_native", "grezi_parser", "GreziRemote", "tree-sitter-grz", "grezi_lsp", "grezi_file_owner", "grezi_mathml", "grezi_export", "grezi_web"]
resolver = "2"

[workspace.package]
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
panic = "abort"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[workspace.dependencies]
# egui = { version = "0.31.0", default-features = false }
# ecolor = { version = "0.31.0" }
# emath = { version = "0.31.0" }
# egui_extras = { version = "0.31.0" }
egui = { git = "https://github.com/StratusFearMe21/egui.git", default-features = false }
eframe = { git = "https://github.com/StratusFearMe21/egui.git", default-features = false }
ecolor = { git = "https://github.com/StratusFearMe21/egui.git" }
emath = { git = "https://github.com/StratusFearMe21/egui.git" }
egui_extras = { git = "https://github.com/StratusFearMe21/egui.git" }
egui-glyphon = { git = "https://github.com/StratusFearMe21/egui-glyphon.git", branch = "grezi", default-features = false }


[patch.crates-io]
eyre = { git = "https://github.com/eyre-rs/eyre", rev = "c4ee249f7c51dc6452e8704ae8d117d90d6eeebc" }
color-spantrace = { git = "https://github.com/eyre-rs/eyre", rev = "c4ee249f7c51dc6452e8704ae8d117d90d6eeebc" }
color-eyre = { git = "https://github.com/eyre-rs/eyre", rev = "c4ee249f7c51dc6452e8704ae8d117d90d6eeebc" }
