[workspace]
members = ["grezi_egui", "grezi_font_serde", "grezi_layout", "grezi_native", "grezi_parser", "GreziRemote", "tree-sitter-grz", "grezi_lsp", "grezi_file_owner", "grezi_mathml", "grezi_export", "grezi_web"]
resolver = "2"

[workspace.package]
edition = "2024"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
panic = "abort"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[workspace.dependencies]
# egui = { version = "0.31.0", default-features = false }
# ecolor = { version = "0.31.0" }
# emath = { version = "0.31.0" }
# egui_extras = { version = "0.31.0" }
egui = { version = "0.32.1", default-features = false }
eframe = { version = "0.32.1", default-features = false }
ecolor = { version = "0.32.1" }
emath = { version = "0.32.1" }
egui_extras = { version = "0.32.1" }
egui-glyphon = { git = "https://github.com/StratusFearMe21/egui-glyphon.git", branch = "grezi", default-features = false }

[patch.crates-io]
tree-house-bindings = { path = "../tree-house/bindings" }
tree-house = { path = "../tree-house/highlighter" }
skidder = { path = "../tree-house/skidder" }
skidder-cli = { path = "../tree-house/cli" }

