[package]
name = "GreziRemote"
version = "0.1.0"
edition = "2021"

[lib]
path = "app/src/main/rust/src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
arc-swap = "1.7.1"
color-eyre = "0.6.3"
eframe = { workspace = true, features = ["android-native-activity", "default_fonts", "wgpu"] }
egui-glyphon = { workspace = true, features = ["glyphon"] }
egui_extras = { workspace = true, features = ["image", "webp", "gif"] }
grezi_egui = { version = "0.1.0", path = "../grezi_egui" }
grezi_font_serde = { version = "0.1.0", path = "../grezi_font_serde" }
grezi_parser = { version = "0.1.0", path = "../grezi_parser", default-features = false }
image = "0.25.5"
keyframe = { version = "1.1.1", default-features = false }
postcard = { version = "1.1.1", features = ["use-std"] }
serde = "1.0.218"
tracing = "0.1.41"
tracing-android = "0.2.0"
tracing-error = "0.2.1"
tracing-panic = "0.1.2"
tracing-subscriber = "0.3.19"
tungstenite = "0.26.2"
ureq = { version = "3.0.8", default-features = false }
winit = "0.30.9"
