[package]
name = "egui_rasterizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { git = "https://github.com/StratusFearMe21/egui", branch = "galley_overried_gamma_stable_tag" }
image = "0.24.7"
tiny-skia = "0.11.2"

