[package]
name = "grezi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"
cassowary = "0.3.0"
keyframe = { version = "1.1.1", default-features = false, features = ["alloc"] }
num_enum = "0.7.0"
serde = { version = "1.0.188", features = ["derive"] }
log = "0.4.20"
egui_extras.workspace = true
image = "0.24.9"
egui-anim = { version = "0.1.0", path = "../egui-anim" }
palette = { version = "0.7.3", default-features = false, features = ["serializing"] }
ehttp = "0.5.0"
ecolor.workspace = true
bincode = "1.3.3"
arc-swap = "1.6.0"
atomic_float = { version = "0.1.0", default-features = false }
egui-glyphon = { version = "0.1.0", git = "https://git.nations.lol/fnmain/egui-glyphon" }
jotdown = { git = "https://git.nations.lol/fnmain/jotdown", version = "0.3.2", default-features = false, features = ["parser"] }
rangemap = { version = "1.5.1", features = ["serde1"] }
nominals = "0.3.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.4.6", features = ["derive"] }
miette = { version = "7.2.0", features = ["fancy", "backtrace"] }
tree-sitter-grz = { version = "0.0.1", path = "../tree-sitter-grz" }
tree-sitter-ntbib = { version = "0.0.1", path = "../tree-sitter-ntbib" }
helix-core = { git = "https://github.com/helix-editor/helix", rev = "2cadec0" }
helix-loader = { git = "https://github.com/helix-editor/helix", rev = "2cadec0" }
helix-term = { git = "https://github.com/helix-editor/helix", rev = "2cadec0" }
helix-view = { git = "https://github.com/helix-editor/helix", rev = "2cadec0" }
helix-lsp = { git = "https://github.com/helix-editor/helix", rev = "2cadec0" }
eframe = { workspace = true, features = [
    "default_fonts",
    "wgpu",
    "wayland",
    "x11",
    "persistence",
] }
lsp-server = "0.7.4"
lsp-types = "0.95.1"
serde_json = "1.0.107"
env_logger = "0.11"
thiserror = "1.0.48"
humantime = "2.1.0"
cssparser = "0.33.0"
cairo-rs = { version = "0.19.2", features = ["pdf", "ps", "svg", "freetype"], optional = true }
hunspell-rs = "0.4.0"
indexmap = "2.1.0"
crossbeam-queue = "0.3.11"
jotdown = { git = "https://git.nations.lol/fnmain/jotdown", version = "0.3.2", default-features = false, features = ["parser"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.10", features = ["js"] }
wgpu = { version = "0.19.1", features = ["webgpu", "webgl"] }
eframe = { workspace = true, features = [
    "wgpu",
    "persistence",
] }
wasm-bindgen-futures = "0.4.38"
jotdown = { git = "https://git.nations.lol/fnmain/jotdown", version = "0.3.2", default-features = false }

[build-dependencies]
tree-sitter = ">=0.22.2"
tree-sitter-grz = { version = "0.0.1", path = "../tree-sitter-grz" }
tree-sitter-ntbib = { version = "0.0.1", path = "../tree-sitter-ntbib" }
case = "1.0.0"

[features]
default = ["cairo"]
cairo = ["cairo-rs"]
