[package]
name = "grezi_export"
version = "0.1.0"
edition.workspace = true

[dependencies]
cairo-rs = { version = "0.20.7", features = ["freetype", "pdf", "ps", "svg", "v1_16"] }
grezi_parser = { version = "0.1.0", path = "../grezi_parser", default-features = false }
egui.workspace = true
egui-glyphon.workspace = true
egui_extras = { workspace = true, features = ["gif", "image", "webp"] }
eyre = { version = "0.6.12", default-features = false }
tracing = "0.1.41"
image = "0.25.5"
grezi_egui = { version = "0.1.0", path = "../grezi_egui" }
keyframe = { version = "1.1.1", default-features = false }
smallvec = "1.14.0"
indexmap = "2.8.0"
grezi_font_serde = { version = "0.1.0", path = "../grezi_font_serde" }
ahash = "0.8.11"
postcard = { version = "1.1.1", features = ["use-std"] }
