[package]
name = "grezi_native"
version = "0.1.0"
edition = "2021"

[dependencies]
arc-swap = "1.7.1"
axum = { version = "0.8.1", optional = true, features = ["ws"] }
clap = { version = "4.5.31", features = ["derive"] }
color-eyre = "0.6.3"
eframe = { path = "../../egui/crates/eframe", default-features = false, features = ["wgpu", "wayland"] }
egui-glyphon = { version = "0.1.0", path = "../../egui-glyphon" }
egui_extras = { workspace = true, features = ["gif", "image", "webp"] }
grezi_egui = { version = "0.1.0", path = "../grezi_egui" }
grezi_font_serde = { version = "0.1.0", path = "../grezi_font_serde" }
grezi_parser = { version = "0.1.0", path = "../grezi_parser" }
image = "0.25.5"
indexmap = { version = "2.7.1", features = ["serde"] }
keyframe = { version = "1.1.1", default-features = false }
postcard = { version = "1.1.1", features = ["use-std"] }
serde = "1.0.218"
supports-color = "3.0.2"
tokio = { version = "1.43.0", features = ["rt", "macros"], optional = true }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[features]
default = ["remote"]
remote = ["dep:tokio", "dep:axum"]
