[package]
name = "grezi_parser"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.11"
boxcar = { version = "0.2.10", optional = true }
color-hex = { version = "0.2.0", optional = true }
color-spantrace = { version = "0.2.1", optional = true }
css-color = { git = "https://github.com/StratusFearMe21/rust-css-color", branch = "errors", version = "0.2.8", features = [
  "miette",
], optional = true }
derive_more = { version = "2.0.1", features = ["debug"] }
dunce = { version = "1.0.5", optional = true }
ecolor = { workspace = true, features = ["serde"] }
emath = { workspace = true, features = ["serde"] }
etcetera = { version = "0.8.0", optional = true }
indexmap = { version = "2.7.1", features = ["serde"] }
jotdown = { version = "0.7.0", default-features = false, optional = true }
libloading = { version = "0.8.6", optional = true }
miette = { version = "7.5.0", features = ["fancy"], optional = true }
owo-colors = { version = "4.2.0", optional = true }
supports-color = { version = "3.0.2", optional = true }
parking_lot = { version = "0.12.3", optional = true }
prehash = "1.0.0"
ropey = { version = "1.6.1", optional = true }
smart-default = "0.7.1"
smartstring = { version = "1.0.1", features = ["serde"] }
thiserror = { version = "2.0.11", optional = true }
tracing = "0.1.41"
tracing-error = "0.2.1"
tree-sitter = { version = "0.25.2", optional = true }
tree-sitter-grz = { version = "0.1.0", path = "../tree-sitter-grz", optional = true }
tree-sitter-highlight = { version = "0.25.2", optional = true }
emojis = { version = "0.6.4", optional = true }
nominals = { version = "0.3.1", optional = true }
smallvec = { version = "1.14.0", features = ["serde"] }
grezi_layout = { version = "0.1.0", path = "../grezi_layout", optional = true }
url = { version = "2.5.4", features = ["serde"] }
bitcode = "0.6.5"
serde = { version = "1.0.218", features = ["derive", "rc"] }
oklab = "1.1.2"

[features]
default = ["parse"]
parse = [
  "boxcar",
  "color-hex",
  "color-spantrace",
  "css-color",
  "dunce",
  "etcetera",
  "jotdown",
  "libloading",
  "miette",
  "owo-colors",
  "supports-color",
  "parking_lot",
  "ropey",
  "thiserror",
  "tree-sitter",
  "tree-sitter-grz",
  "tree-sitter-highlight",
  "emojis",
  "nominals",
  "grezi_layout"
]

[dev-dependencies]
color-eyre = "0.6.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
